syntax = "proto3";

// Package name
option go_package = "RetroPGF-Hub/RetroPGF-Hub-Backend-Go";


// ------- Fav -------
// Structures
message CreateFavProjectReq {
    string projectId = 1;
}
message CreateFavProjectRes {
    string msg = 1;
}

message DeleteFavProjectReq {
    string projectId = 1;
}
message DeleteFavProjectRes {
    string msg = 1;
}

// Method
service FavGrpcService {
    rpc CreateFavProject(CreateFavProjectReq) returns (CreateFavProjectRes);
    rpc DeleteFavProject(DeleteFavProjectReq) returns (DeleteFavProjectRes);
}
// ------- Fav -------

